--- a/hello.html
+++ b/hello.html
@@ -9,6 +9,14 @@
 <body>
    <h1>Trial</h1>
    <p>Awesome Trial</p>
-
+   <section>
+       <nav>
+           <ul>
+               <li>home</li>
+               <li>About</li>
+               <li>Trend</li>
+           </ul>
+       </nav>
+   </section>
 </body>
 </html>
